# chakra-rs

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  dependency-graph.md
chakracore/: Cargo.toml  build.rs
chakracore-cxx/: .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh
chakracore-cxx/CorePlatform/: CMakeLists.txt
chakracore-cxx/lib/: CMakeLists.txt
chakracore-cxx/lib/Backend/: AgenPeeps.cpp  AsmJsJITInfo.cpp  AsmJsJITInfo.h  Backend.cpp  Backend.h  BackendApi.cpp  BackendApi.h  BackendOpCodeAttrAsmJs.cpp  BackendOpCodeList.h  BackendPch.h  BackwardPass.cpp  BackwardPass.h  BailOut.cpp  BailOut.h  CMakeLists.txt  CaseNode.cpp  CaseNode.h  Chakra.Backend.vcxproj  CodeGenAllocators.cpp  CodeGenAllocators.h  CodeGenNumberAllocator.cpp  CodeGenWorkItem.cpp  CodeGenWorkItem.h  DbCheckPostLower.cpp  DbCheckPostLower.h  EhFrame.cpp  EhFrame.h  EmitBuffer.cpp  EmitBuffer.h  Encoder.cpp  Encoder.h  EquivalentTypeSet.cpp  EquivalentTypeSet.h  ExternalLowerer.h  FixedFieldInfo.cpp  FixedFieldInfo.h  FlowGraph.cpp  FlowGraph.h  Func.cpp  Func.h  (+116 more)
chakracore-cxx/lib/Common/: BackendApi.h  CMakeLists.txt  Common.h  CommonBasic.h  CommonDefines.h  CommonMin.h  CommonMinMemory.h  ConfigFlagsList.h  DefaultCommonExternalApi.cpp
chakracore-cxx/lib/JITClient/: Chakra.JITClient.vcxproj  JITClient.h  JITClientPch.h  JITManager.cpp  JITManager.h
chakracore-cxx/lib/JITIDL/: Chakra.JITIDL.vcxproj  ChakraJIT.idl  JITTypes.h
chakracore-cxx/lib/JITServer/: Chakra.JITServer.vcxproj  JITServer.cpp  JITServer.h  JITServerPch.h
chakracore-cxx/lib/Jsrt/: CMakeLists.txt  Chakra.Jsrt.vcxproj  ChakraCommon.h  ChakraCommonWindows.h  ChakraCore.h  ChakraCoreWindows.h  ChakraDebug.h  Jsrt.cpp  JsrtCommonExports.inc  JsrtContext.cpp  JsrtContext.h  JsrtDebugEventObject.cpp  JsrtDebugEventObject.h  JsrtDebugManager.cpp  JsrtDebugManager.h  JsrtDebugUtils.cpp  JsrtDebugUtils.h  JsrtDebuggerObject.cpp  JsrtDebuggerObject.h  JsrtDiag.cpp  JsrtExternalArrayBuffer.cpp  JsrtExternalArrayBuffer.h  JsrtExternalObject.cpp  JsrtExternalObject.h  JsrtHelper.cpp  JsrtInternal.h  JsrtPch.h  JsrtRuntime.cpp  JsrtRuntime.h  JsrtSourceHolder.cpp  JsrtSourceHolder.h  JsrtThreadService.cpp  TestHooksRt.h  jsrtHelper.h
chakracore-cxx/lib/Parser/: Alloc.cpp  Alloc.h  BGParseManager.cpp  BGParseManager.h  BackgroundParser.cpp  BackgroundParser.h  CMakeLists.txt  CaseInsensitive.cpp  CaseInsensitive.h  Chakra.Parser.vcxproj  CharClassifier.cpp  CharClassifier.h  CharMap.h  CharSet.cpp  CharSet.h  CharTrie.cpp  CharTrie.h  Chars.h  DebugWriter.cpp  DebugWriter.h  Hash.cpp  Hash.h  HashFunc.cpp  OctoquadIdentifier.cpp  OctoquadIdentifier.h  Parse.cpp  Parse.h  ParseFlags.h  ParseTreeComparer.h  Parser.h  ParserCommon.h  ParserPch.h  RegexCompileTime.cpp  RegexCompileTime.h  RegexFlags.h  RegexParser.cpp  RegexParser.h  RegexPattern.cpp  RegexPattern.h  RegexRuntime.cpp  (+24 more)
chakracore-cxx/lib/Runtime/: CMakeLists.txt  Runtime.h  RuntimeCommon.h
chakracore-cxx/lib/SCACore/: CMakeLists.txt  Chakra.SCACore.vcxproj  SCACore.cpp  SCACore.h  SCACorePch.h  SCADeserialization.cpp  SCADeserialization.h  SCAEngine.cpp  SCAEngine.h  SCAPropBag.cpp  SCAPropBag.h  SCASerialization.cpp  SCASerialization.h  SCATypes.h  StreamHelper.cpp  StreamHelper.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h
chakracore-cxx/lib/WasmReader/: CMakeLists.txt  Chakra.WasmReader.vcxproj  EmptyWasmByteCodeWriter.h  WasmBinaryOpCodes.h  WasmBinaryReader.cpp  WasmBinaryReader.h  WasmByteCodeGenerator.cpp  WasmByteCodeGenerator.h  WasmCustomReader.cpp  WasmCustomReader.h  WasmDataSegment.cpp  WasmDataSegment.h  WasmElementSegment.cpp  WasmElementSegment.h  WasmFunctionInfo.cpp  WasmFunctionInfo.h  WasmGlobal.cpp  WasmGlobal.h  WasmLimits.h  WasmParseTree.cpp  WasmParseTree.h  WasmReader.h  WasmReaderBase.h  WasmReaderInfo.h  WasmReaderPch.h  WasmSection.cpp  WasmSection.h  WasmSectionLimits.h  WasmSignature.cpp  WasmSignature.h
chakracore-cxx/lib/wabt/: CMakeLists.txt  wabt.vcxproj
chakracore-cxx/pal/: CMakeLists.txt
chakracore-cxx/pal/inc/: assert_only.h  cclock.hpp  debugmacrosext.h  mbusafecrt.h  pal.h  pal_assert.h  pal_endian.h  pal_error.h  pal_file.h  pal_mstypes.h  pal_safecrt.h  safemath.h  strsafe.h  unixasmmacros.inc  volatile.h
chakracore-cxx/pal/src/: CMakeLists.txt  config.h.in  configure.cmake
chakracore-cxx/test/: CMakeLists.txt  ci.build.cmd  ci.testone.cmd  rlexedirs.xml  runcitests.cmd
chakracore-cxx/test/Array/: Array_TypeConfusion_bugs.js  CopyOnAccessArray_bugs.js  FailToSetLength.js  FilterWithTypedArray.js  SliceandConcatAlterOriginalArrayBug.js  SpliceBtreeMemoryCorruption.js  arr_bailout.js  array_at.js  array_findlast.js  array_findlastindex.js  array_flat.js  array_includes.js  array_sort_order.js  array_splice_515632.js  bug1062870.js  bug1065362.js  bug12340575.js  bug_9575461.js  delete.js  ldindex.js  memset_invariant.js  nativearray_gen2.js  nativearray_gen3.js  sliceArrayForceBtreeBug616623.js
chakracore-cxx/test/AsmJs/: MathBuiltinsCall.js
chakracore-cxx/test/Basics/: FloatComparison.js  Labels.js  ScriptFunctionToStrings.js  SpecialSymbolCapture.js  rlexe.xml  typeof.js  withBug940841.js
chakracore-cxx/test/BigInt/: add.js  assign_by_value.js  bitwise_not.js  comparison.js  decrement.js  exception.js  global_object.js  increment.js  mixed.js  multiply.js  strictly_equal.js  subtract.js
chakracore-cxx/test/Boolean/: basics.js
chakracore-cxx/test/Bugs/: OS_5553123.js  bug14323330.js  bug_5572_wscript_loadscript_loadmodule.js  bug_5585.js  bug_5883.js  bug_6179.js  bug_OS14326981.js  bug_OS17417473.js  bug_OS21193960.js  cross_context_test.js  deletenonconfig.js  json_bugs.js  misc_bugs.js  simpletypehandler-property-deletion.js
chakracore-cxx/test/Closures/: update-funcexpr.js
chakracore-cxx/tools/: lttng.py
chakracore-sys/: Cargo.toml  build.rs
chakracore-sys/src/: chhelper.rs  config.rs  lib.rs  str_helper.rs
chakracore/src/: lib.rs  main.rs
src/: main.rs
(+1488 files in other folders)
