[package]
name = "chakracore"
version = "0.1.0"
edition = "2021"

[dependencies]

[target.'cfg(unix)'.build-dependencies]
cc = { version = "1.2.10", features = ["parallel"] }
cmake = "0.1.52"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.24.0"

[features]
compile-cpp = []
optimize = []
