[package]
name = "chakracore"
version = "0.1.0"
edition = "2024"

[dependencies]

[target.'cfg(unix)'.build-dependencies]
cc = { version = "1.2.32", features = ["parallel"] }
cmake = "0.1.54"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"

[features]
compile-cpp = []
optimized-tests = []
