[package]
name = "chakracore-sys"
version = "0.1.0"
edition = "2024"
links = "chakracore-sys"

[dependencies]
chakra = { path = "../chakra" }
cxx = "1.0.194"

[build-dependencies]
cc = { version = "1.2.57", features = ["parallel"] }
cmake = "0.1.57"
cxx-build = "1.0.194"

[features]
optimized-tests = []
