[package]
name = "chakracore-sys"
version = "0.1.0"
edition = "2024"
links = "chakracore-sys"

[dependencies]
cxx = "1.0.194"
serde = { version = "1.0.229", features = ["derive"] }

[build-dependencies]
cmake = "0.1.57"
cxx-build = { version = "1.0.194", features = ["parallel"] }

[features]
compile-cpp = []
optimized-tests = []
