[package]
name = "chakracore"
version = "0.1.0"
edition = "2024"

[dependencies]
chakracore-sys = { path = "../chakracore-sys" }
cxx = "1.0.194"

[build-dependencies]
cc = { version = "1.2.56", features = ["parallel"] }
cmake = "0.1.57"
cxx-build = "1.0.194"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"

[features]
optimized-tests = ["chakracore-sys/optimized-tests"]
