[package]
name = "chakracore"
version = "0.1.0"
edition = "2024"

[dependencies]
chakra = { path = "../chakra" }
chakracore-sys = { path = "../chakracore-sys" }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"

[features]
compile-cpp = ["chakracore-sys/compile-cpp"]
optimized-tests = ["chakracore-sys/optimized-tests"]
