[package]
name = "chakracore"
version = "0.1.0"
edition = "2024"

[dependencies]
chakracore-sys = { path = "../chakracore-sys" }
serde_json = "1.0.151"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"

[features]
compile-cpp = ["chakracore-sys/compile-cpp"]
optimized-tests = ["chakracore-sys/optimized-tests"]
